<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/paddings">

        <AutoCompleteTextView
            android:id="@+id/actv_oldPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/oldPwd" />

        <AutoCompleteTextView
            android:id="@+id/actv_newPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/newPwd" />

        <AutoCompleteTextView
            android:id="@+id/actv_reNewPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/reNewPwd" />

        <Button
            android:id="@+id/bt_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />
    </LinearLayout>

</LinearLayout>
